[project]
name = "qvapay"
version = "0.3.0"
description = "Python SDK for the QvaPay API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Reinier Hernández", email = "me@reinierhernandez.com" },
]
maintainers = [
    { name = "Reinier Hernández", email = "me@reinierhernandez.com" },
    { name = "Carlos Lugones", email = "contact@lugodev.com" },
    { name = "Ozkar L. Garcell", email = "ozkar.garcell@gmail.com" },
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
keywords = ["QvaPay", "api", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.20.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/ragnarok22/qvapay-python"
Repository = "https://github.com/ragnarok22/qvapay-python"
Documentation = "https://github.com/ragnarok22/qvapay-python"
Tracker = "https://github.com/ragnarok22/qvapay-python/issues"

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "flake8>=4.0.1",
    "black>=21.9b0",
    "isort>=5.9.3",
    "pytest-cov>=3.0.0",
    "commitizen>=2.20.0",
    "anyio[trio]>=3.3.4",
    "unasync-cli>=0.0.5",
    "pre-commit>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
