[project]
name = "qvapay"
version = "0.9.0"
description = "Python SDK for the QvaPay API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Reinier Hernández", email = "me@reinierhernandez.com" },
]
maintainers = [
    { name = "Reinier Hernández", email = "me@reinierhernandez.com" },
    { name = "Carlos Lugones", email = "contact@lugodev.com" },
    { name = "Ozkar L. Garcell", email = "ozkar.garcell@gmail.com" },
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
keywords = ["QvaPay", "api", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ragnarok22/qvapay-python"
Repository = "https://github.com/ragnarok22/qvapay-python"
Documentation = "https://github.com/ragnarok22/qvapay-python"
Tracker = "https://github.com/ragnarok22/qvapay-python/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
    "pytest-cov>=6.0.0",
    "anyio[trio]>=4.0.0",
    "unasync-cli>=0.0.9",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["qvapay"]

[tool.pytest.ini_options]
addopts = "--cov=qvapay --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"
